--- a/templates/browse_yogas.html
+++ b/templates/browse_yogas.html
@@ -16,15 +16,15 @@
 {% block main %}
 <div class="container">
 	<div class="row">
-		<div class="col-sm-8">
+		
+		{% for yoga in yogas %}
+		<div class="col-sm-4">
 			<div class="panel panel-default">
-			{% for yoga in yogas %}
 				{% if yoga.image %}
 				<a href="{{ yoga.get_absolute_url }}">
 					<img src="{{ yoga.image.url }}" class="img-responsive">
 				</a>
 				{% endif %}
-			{% endfor %}
 			<div class="caption">
 				<a href="{{ yoga.get_absolute_url }}">
 				<h3>{{ yoga.name }}</h3>
@@ -35,6 +35,10 @@
 			</div>
 			</div>
 		</div>
+		{% cycle "" "" "</div><div class='row'>" %}
+		{% endfor %}
+		<div class="col-sm-4">
+		</div>s
 	</div>
 </div>
 {% endblock main %}
