--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -21,7 +21,7 @@
 
 {% block main %}
 
-{%for i in splitted_search_query %}
+<!---{%for i in splitted_search_query %}
 <h6>{{i}}</h6>
 {%endfor %}
 <br>
@@ -29,7 +29,7 @@
 <h6>{{i}}</h6>
 {%endfor %}
 <br>
-<h6>{{test}}</h6><br>
+<h6>{{test}}</h6><br> --->
 <div class="container">
 <div class="row">
   {% if query_list %}
@@ -49,6 +49,7 @@
           {% endif %}
           <div class='caption'>
             <h3><a href="{{ k.get_absolute_url }}"> {{ k.title|truncatechars:30 }} </a> </h3>
+            <small>Source{{k.source}}</small><br>
             <small>Posted on {{ k.created|date }}.</small><small>Posted on {{ k.created|date }}.</small>
             <div>{{ k.summary }}</div>
           </div><!--caption-->
@@ -90,7 +91,7 @@
 
             <h3>
               <a href="{{ post.get_absolute_url }}">{{ post.title|truncatechars:30 }}</a>
-  
+
             </h3>
 
             {% if post.herbs %}
