shop/browse small change

--- a/templates/shop_detail.html
+++ b/templates/shop_detail.html
@@ -45,6 +45,11 @@
     </div>
     </div><!--col 2-->
 </div><!--row-->
+<div class="row">
+    <div class="col-sm-6 col-sm-offset-3"s>
+        
+    </div>
+</div>
 </div><!--container-->
 
 {% endblock main %}
