--- a/templates/browse_yogas.html
+++ b/templates/browse_yogas.html
@@ -19,33 +19,33 @@
 {% endblock page_header %}
 
 {% block main %}
-<div class="col-sm-10">
 <div class="container">
 	<div class="row">
-		
-		{% for yoga in yogas %}
+
+		{% for yo in yogas %}
 		<div class="col-sm-4">
 			<div class="panel panel-default">
-				{% if yoga.image %}
-				<a href="{{ yoga.get_absolute_url }}">
-					<img src="{{ yoga.image.url }}" class="img-responsive">
+				{% if yo.image %}
+				<a href="{{ yo.get_absolute_url }}">
+					<img src="{{ yo.image.url }}" class="img-responsive">
 				</a>
 				{% endif %}
 			<div class="caption">
-				<a href="{{ yoga.get_absolute_url }}">
-				<h3>{{ yoga.name }}</h3>
+				<a href="{{ yo.get_absolute_url }}">
+				<h3>{{ yo.name }}</h3>
 				</a>
-				<div>
-					{{ yoga.description|truncatechars:30 }}
-				</div>
+				<p>
+					{{ yo.description|truncatechars:30 }}
+				</p>
 			</div>
 			</div>
 		</div>
 		{% cycle "" "" "</div><div class='row'>" %}
 		{% endfor %}
+
 		<div class="col-sm-4">
-		</div>s
+		</div>
 	</div>
 </div>
-</div>
+
 {% endblock main %}
