improved post detail and post list layout

--- a/templates/browse_yogas.html
+++ b/templates/browse_yogas.html
@@ -7,13 +7,13 @@
 {% endblock page_title %}
 
 {% block bg %}
-  {% static 'jadibuti/img/bg-knife.jpg' %}
+  {% static 'jadibuti/img/bg-yoga.jpg' %}
 {% endblock bg %}
 
 {% block page_header %}
 <header class="vpad-sm">
 <div class="container">
-  <h1>{{ page_title }}</h1>
+  <h1 class="white-text text-shadow">{{ page_title }}</h1>
 </div><!--container-->
 </header>
 {% endblock page_header %}
