--- a/templates/browse_yogas.html
+++ b/templates/browse_yogas.html
@@ -2,18 +2,19 @@
 {% load markdown_deux_tags %}
 {% load staticfiles %}
 
+
 {% block page_title %}
-{{ page_title }}
+	{{ page_title }}
 {% endblock page_title %}
 
 {% block bg %}
-  {% static 'jadibuti/img/bg-yoga.jpg' %}
+ 	{% static 'jadibuti/img/bg-yoga.jpg' %}
 {% endblock bg %}
 
 {% block page_header %}
 <header class="vpad-sm">
 <div class="container">
-  <h1 class="white-text text-shadow">{{ page_title }}</h1>
+	<h1 class="white-text text-shadow">{{ page_title }}</h1>
 </div><!--container-->
 </header>
 {% endblock page_header %}
@@ -24,22 +25,24 @@
 
 		{% for yo in yogas %}
 		<div class="col-sm-4">
-			<div class="panel panel-default">
-				{% if yo.image %}
-				<a href="{{ yo.get_absolute_url }}">
-					<img src="{{ yo.image.url }}" class="img-responsive">
-				</a>
-				{% endif %}
-			<div class="caption">
-				<a href="{{ yo.get_absolute_url }}">
+		<div class="panel panel-default">
+		<div class="panel-body">
+
+			{% if yo.image %}
+			<a href="{{ yo.get_absolute_url }}">
+				<img src="{{ yo.image.url }}" class="img-responsive">
+			</a>
+			{% endif %}
+
+			<a href="{{ yo.get_absolute_url }}">
 				<h3>{{ yo.name }}</h3>
-				</a>
-				<p>
-					{{ yo.description|truncatechars:30 }}
-				</p>
-			</div>
-			</div>
-		</div>
+			</a>
+			<p>
+				{{ yo.description|truncatechars:30 }}
+			</p>
+		</div><!--panel-body-->
+		</div><!--panel-->
+		</div><!--col-->
 		{% cycle "" "" "</div><div class='row'>" %}
 		{% endfor %}
 
