--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -31,71 +31,60 @@
 {%endfor %}
 <br>
 <h6>{{test}}</h6><br> --->
-{% endcomment %}
 <div class="container">
 <div class="row">
-  {% if query_list_by_tags %}
-    {% for i in query_list_by_tags %}
+  {% if query_list %}
+    {% for i in query_list %}
+<!---        <h2>{{i}}</h2> query_list = []
+    unique_query_list = []query_list = []
+    unique_query_list = []--->
       {% for k in i %}
-        <!-- <h2>{{z}}</h2> -->
-        <div class="row">
-        <div class="col-sm-12">
+      <div class="row">
+      <div class="col-sm-12">
 
-          <div class="thumbnail">
-            {% if k.image %}
-            <a href="{{ k.get_absolute_url }}">
-              <img src='{{ k.image.url }}' class='img-responsive'>
-            </a>
-            {% endif %}
-            <div class='caption'>
-              <h3><a href="{{ k.get_absolute_url }}"> {{ k.title|truncatechars:30 }} </a> </h3>
-              <p><i>Source: {{k.source}}</i></p>
-            {% if k.herbs %}
-            <p>
-              {% for h in k.herbs.all %}
-                <a href="{{ h.get_absolute_url }}"><span class="label label-default">{{ h.eng_name }}</span></a>
-              {% endfor %}
-            </p>
-            {% endif %}
-              <small>Posted on {{ k.created|date }}.</small><small>Posted on {{ k.created|date }}.</small>
-              <div>{{ k.summary }}</div>
-            </div><!--caption-->
-          </div><!--thumbnail-->
+        <div class="thumbnail">
+          {% if k.image %}
+          <a href="{{ k.get_absolute_url }}">
+            <img src='{{ k.image.url }}' class='img-responsive'>
+          </a>
+          {% endif %}
+          <div class='caption'>
+            <h3><a href="{{ k.get_absolute_url }}"> {{ k.title|truncatechars:30 }} </a> </h3>
+            <p><i>Source: {{k.source}}</i></p>
+          {% if k.herbs %}
+          <p>
+            {% for h in k.herbs.all %}
+              <a href="{{ h.get_absolute_url }}"><span class="label label-default">{{ h.eng_name }}</span></a>
+            {% endfor %}
+          </p>
+          {% endif %}
+            <small>Posted on {{ k.created|date }}.</small><small>Posted on {{ k.created|date }}.</small>
+            <div>{{ k.summary }}</div>
+          </div><!--caption-->
+        </div><!--thumbnail-->
 
-        </div><!--col-->
-        </div><!---row-->
-
-        {% endfor%}
+      </div><!--col-->
+    </div><!---row-->
+      {% endfor%}
     {% endfor %}
   {% endif %}
-
-  <!-- <div class="container">
-  <div class="row">
-    {% if query_list_by_title %}
-      {% for i in query_list_by_tags %}
-        {%if i not in query_list_by_tags%}
-            {% for k in i %}
-            {%include 'search_display.html'%}
-            {% endfor%}
-          {%endif%}
-      {% endfor %}
-    {% endif %} -->
-
+{% endcomment %}
 
 <div class="container">
 <div class="row">
 
+  <!-- list -->
   <div class="col-md-8">
     {# {% if not query_list %} ### This line didn't show 'no results' when there were no results #}
-      {% if not posts and request.GET.q %}
-        <div class="row">
-          <div class="col-sm-12">
-            <h3>No Result Found</h3>
-          </div><!--col-->
-        </div><!--row-->
-      {% endif %}
+    {% if not posts and request.GET.q %}
+    <div class="row">
+    <div class="col-sm-12 white-bg">
+      <h3>No Result Found</h3>
+    </div><!--col-->
+    </div><!--row-->
+    {% endif %}
     {# {% endif %} #}
-    {% if test %}
+
     {% for post in posts %}
       <div class="row">
       <div class="col-sm-12">
@@ -122,7 +111,9 @@
               </span>
               {% endif %}
             </h3>
-              <p><i>Source: {{post.source}}</i></p>
+            
+            <p><i>Source: {{post.source}}</i></p>
+            
             {% if post.herbs %}
             <p>
               {% for h in post.herbs.all %}
@@ -139,7 +130,9 @@
       </div><!--col-->
       </div><!--row-->
     {% endfor %}
-    {% endif %}
+
+
+    <!-- Pagination -->
     {% if posts %}
       <div class="row text-center">
       <div class="col-sm-12">
@@ -192,6 +185,7 @@
   </div><!--col-->
 
 
+  <!-- Sidebar -->
   <div class="col-md-4">
   <div class="panel panel-default">
     <div class="panel-heading">
