--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -31,44 +31,56 @@
 {%endfor %}
 <br>
 <h6>{{test}}</h6><br> --->
+{% endcomment %}
 <div class="container">
 <div class="row">
-  {% if query_list %}
-    {% for i in query_list %}
-<!---        <h2>{{i}}</h2> query_list = []
-    unique_query_list = []query_list = []
-    unique_query_list = []--->
+  {% if query_list_by_tags %}
+    {% for i in query_list_by_tags %}
       {% for k in i %}
-      <div class="row">
-      <div class="col-sm-12">
+        <!-- <h2>{{z}}</h2> -->
+        <div class="row">
+        <div class="col-sm-12">
 
-        <div class="thumbnail">
-          {% if k.image %}
-          <a href="{{ k.get_absolute_url }}">
-            <img src='{{ k.image.url }}' class='img-responsive'>
-          </a>
-          {% endif %}
-          <div class='caption'>
-            <h3><a href="{{ k.get_absolute_url }}"> {{ k.title|truncatechars:30 }} </a> </h3>
-            <p><i>Source: {{k.source}}</i></p>
-          {% if k.herbs %}
-          <p>
-            {% for h in k.herbs.all %}
-              <a href="{{ h.get_absolute_url }}"><span class="label label-default">{{ h.eng_name }}</span></a>
-            {% endfor %}
-          </p>
-          {% endif %}
-            <small>Posted on {{ k.created|date }}.</small><small>Posted on {{ k.created|date }}.</small>
-            <div>{{ k.summary }}</div>
-          </div><!--caption-->
-        </div><!--thumbnail-->
+          <div class="thumbnail">
+            {% if k.image %}
+            <a href="{{ k.get_absolute_url }}">
+              <img src='{{ k.image.url }}' class='img-responsive'>
+            </a>
+            {% endif %}
+            <div class='caption'>
+              <h3><a href="{{ k.get_absolute_url }}"> {{ k.title|truncatechars:30 }} </a> </h3>
+              <p><i>Source: {{k.source}}</i></p>
+            {% if k.herbs %}
+            <p>
+              {% for h in k.herbs.all %}
+                <a href="{{ h.get_absolute_url }}"><span class="label label-default">{{ h.eng_name }}</span></a>
+              {% endfor %}
+            </p>
+            {% endif %}
+              <small>Posted on {{ k.created|date }}.</small><small>Posted on {{ k.created|date }}.</small>
+              <div>{{ k.summary }}</div>
+            </div><!--caption-->
+          </div><!--thumbnail-->
 
-      </div><!--col-->
-    </div><!---row-->
-      {% endfor%}
+        </div><!--col-->
+        </div><!---row-->
+
+        {% endfor%}
     {% endfor %}
   {% endif %}
-{% endcomment %}
+
+  <!-- <div class="container">
+  <div class="row">
+    {% if query_list_by_title %}
+      {% for i in query_list_by_tags %}
+        {%if i not in query_list_by_tags%}
+            {% for k in i %}
+            {%include 'search_display.html'%}
+            {% endfor%}
+          {%endif%}
+      {% endfor %}
+    {% endif %} -->
+
 
 <div class="container">
 <div class="row">
@@ -83,7 +95,7 @@
         </div><!--row-->
       {% endif %}
     {# {% endif %} #}
-
+    {% if test %}
     {% for post in posts %}
       <div class="row">
       <div class="col-sm-12">
@@ -122,7 +134,7 @@
       </div><!--col-->
       </div><!--row-->
     {% endfor %}
-
+    {% endif %}
     {% if posts %}
       <div class="row text-center">
       <div class="col-sm-12">
