--- a/templates/yoga_detail.html
+++ b/templates/yoga_detail.html
@@ -9,6 +9,7 @@
 <header class="vpad-sm">
 <div class="container">
   <h1>{{ page_title }}</h1>
+  <p>{{yoga.description|safe}}</p>
 </div><!--container-->
 </header>
 {% endblock page_header %}
